Fix AI Settings panel for very narrow width
Previously even when scrolling to the very left, the left part of the
settings was cut off.

Screenshots: https://imgur.com/a/p765TKG

Bug: b/350668580
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5851137
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/settings/aiSettingsTab.css
+++ b/front_end/panels/settings/aiSettingsTab.css
@@ -148,7 +148,12 @@
   border-top: 1px solid var(--sys-color-divider);
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+@media (min-width: 640px) {
+  .settings-container-wrapper {
+    align-items: center;
+  }
 }
 
 header {
